<resources>
    <string name="app_name">Ratatouille</string>
    <string name="title_activity_mapa_direccion">Ingresa tu dirección</string>
    <string name="sel_ubi">Seleccionar ubicación</string>
    <string name="dir">Dirección</string>
    <string name="confirm">Confirmar Servicio</string>
    <string name="title_activity_map_service_available">Map</string>
    <string name="enviar_calificaci_n">Enviar calificación</string>
    <string name="james_bond">James Bond</string>
    <string name="AgregarMetodoPAgo">Agregar método de pago</string>
    <string name="MetodoPAgo">Seleccionar método de pago</string>
    <string name="ServicioConfirmado">¡Su servicio ha sido confirmado!</string>
    <string name="por_el_servicio_recibiste">Por el servicio recibiste:</string>
    <string name="resumenServicio">Resumen de tu servicio:</string>
    <string name="Dia">Día:</string>
    <string name="TipoServicio">Tipo de Servicio:</string>
    <string name="TipoDePago">Método de Pago</string>
    <string-array name="servicios">
        <item>Tengo ingredientes y utensilios</item>
        <item>Tengo utensilios pero no ingredientes</item>
        <item>Ni utensilios ni ingredientes, Catering</item>
    </string-array>
    <string-array name="direcciones">
        <item>Av Siempre Viva #37-61</item>
        <item>We Work Calle 75</item>
        <item>Edificio Maldonado, Universidad Javeriana</item>
    </string-array>
    <string-array name="mediosPago">
        <item>MasterCard **34</item>
        <item>Efectivo</item>
        <item>Visa **34</item>
    </string-array>
    <string-array name="tiposReceta">
        <item>Postres</item>
        <item>Entradas</item>
        <item>Italiana</item>
        <item>Arabe</item>
        <item>Japonesa</item>
    </string-array>
    <string-array name="todasRecetas">
        <item>Helado de brownie</item>
        <item>Torta de chocolate</item>
    </string-array>
    <!--    TODO: Cambiar plata por créditos de la app-->
    <string-array name="tiposChef">
        <item>Chef principiante  $20.000/h </item>
        <item>Chef profesional   $10.000/h </item>
    </string-array>
</resources>
